# GibbsAmietAcoustics

./: README.md  filter.py  main.py  pressure_fluctuations_etienne.ipynb  pyproject.toml  stats.py  stats_te_noise.py  test.py  utils.py
docs/source/: conf.py  filter.rst  gibbs_amiet.rst  index.rst  modules.rst  stats.rst  utils.rst
gibbs_amiet/: stats_te_noise.py
src/gibbs_amiet/: __init__.py  filter.py  stats.py  stats_te_noise.py  utils.py
